--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "elibyy/tcpdf-laravel": "^5.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "tecnickcom/tcpdf": "^6.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
