--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "benjamincrozat/laravel-dropbox-driver": "^2.0",
+        "berkayk/onesignal-laravel": "^1.0",
         "elibyy/tcpdf-laravel": "^5.7",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "pusher/pusher-php-server": "^3.3",
+        "superbalist/laravel-google-cloud-storage": "^2.1",
         "tecnickcom/tcpdf": "^6.2"
     },
     "require-dev": {
